force-app/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Account Engagement First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Account Engagement First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Account Engagement First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Account Engagement grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Account Engagement Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Account Engagement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Account Engagement Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Account Engagement score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Account Engagement. From there you can view his or her complete activity history. This URL is generated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Assistant_Director_for_Curriculum_IAA1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Jumpstart_Vacancy__c</columns>
        <columns>Curricula_Experience__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Assistant Director for Curriculum (IAA)</value>
        </filters>
        <label>Assistant Director for Curriculum (IAA)</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assistant_Director_for_Curriculum_IAA2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Assistant Director for Curriculum (IAA)</value>
        </filters>
        <label>Assistant Director for Curriculum (IAA)</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assistant_Pastoral_Principal_SCIE</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Job_Title__c</columns>
        <columns>Jumpstart_Vacancy__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Assistant Pastoral Principal (SCIE)</value>
        </filters>
        <label>Assistant Pastoral Principal (SCIE)</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aventri_Events_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Aventri Events</label>
        <queue>Aventri_Events</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_R_Leads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>Job_Title__c</columns>
        <columns>Primary_Subject_Area__c</columns>
        <columns>Divisional_Experience__c</columns>
        <columns>Curricula_Experience__c</columns>
        <columns>Describe_current_interest_in_CIS__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>C&amp;R Leads</label>
        <queue>C_R_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Demo_Lead_Queue</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Demo Lead Queue</label>
    </listViews>
    <listViews>
        <fullName>Dep_Head_of_Ele_Student_Welfare_NIST</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Job_Title__c</columns>
        <columns>Jumpstart_Vacancy__c</columns>
        <columns>Curricula_Experience__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Deputy Head of Elementary – Student Welfare (PYP) (NIST)</value>
        </filters>
        <label>Dep Head of Ele – Student Welfare (NIST)</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deputy_HoS_Yoyogi_IS</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Deputy HoS (Yoyogi IS)</value>
        </filters>
        <label>Deputy HoS (Yoyogi IS)</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deputy_HoS_Yoyogi_IS1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Deputy HoS (Yoyogi IS)</value>
        </filters>
        <label>Deputy HoS (Yoyogi IS)</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Director_ISR</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Director (ISR)</value>
        </filters>
        <label>Director (ISR)</label>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Director_of_IT_and_Digital_Learning</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Director of IT and Digital Learning (ISF)</value>
        </filters>
        <label>Director of IT and Digital Learning</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Director_of_Learning_and_Research_ISF</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>equals</operation>
            <value>Director of Learning and Research (ISF)</value>
        </filters>
        <label>Director of Learning and Research (ISF)</label>
        <queue>Jumpstart_Applications</queue>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Elementary_School_Principal_ISD</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Jumpstart_Vacancy__c</field>
            <operation>contains</operation>
            <value>Elementary School Principal (ISD)</value>
        </filters>
        <label>Elementary School Principal (ISD)</label>
        <sharedTo>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CIS_Accreditation_Evaluator</fullName>
        <active>true</active>
        <businessProcess>CIS Accreditation Evaluator</businessProcess>
        <label>CIS Accreditation Evaluator</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIS_Event</fullName>
        <active>true</active>
        <businessProcess>Lead process</businessProcess>
        <description>Lead record type for CIS events registrants</description>
        <label>CIS Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>C_R_Lead</fullName>
        <active>true</active>
        <businessProcess>C%26R Lead</businessProcess>
        <description>C&amp;R Lead via SG form</description>
        <label>C&amp;R Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Jumpstart_Application</fullName>
        <active>true</active>
        <businessProcess>Jumpstart Application</businessProcess>
        <label>Jumpstart Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>LCRF_2019</fullName>
        <active>true</active>
        <businessProcess>London 19</businessProcess>
        <description>Record type for LCRF 19 Leads</description>
        <label>LCRF 2019</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <businessProcess>Lead process</businessProcess>
        <label>Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>